# sdr-nnp

./: README.md
Code/: LGCDR_v1.sln
Code/LGCDR_v1/: CMakeLists.txt  define.hpp  main.cpp
Code/LGCDR_v1/Data/example_data_set_1/: data_.txt  data__header.txt  data__lgc.txt  data__result_dr.txt  data__s_dr.txt  info.txt
Code/python-nnp/: 01_convert_datasets.py  02_run_sdr.py  03_run_nnp.py  03_run_nnp_on_DR.py  03_run_nnp_separate.py  04_compute_metrics.py  05_consolid_results.py  README.md  extra_split.py  main.py  nnp.py  params.py  sdr.py
